[tool.poetry]
name = "glyph"
version = "0.1.0"
description = ""
authors = ["externref"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
attrs = "^23.2.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
nox = "^2024.4.15"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
